Fixed sidebar overflow on the about page on mobile devices

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,6 +11,7 @@ html {
 body {
   padding: 0px !important;
   background-color: whitesmoke;
+  overflow: hidden;
 }
 
 .mainTitle {
